examples/test/testpolicy12998.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12998
  namespace: namespace232
spec:
  podSelector:
    matchLabels:
      key19: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value33
          key28: value19
          key43: value15
      podSelector:
        matchLabels:
          key19: value46
          key48: value31
          key12: value2
